--- a/source/sprawsm-discuss.less
+++ b/source/sprawsm-discuss.less
@@ -6,16 +6,26 @@
 // Variables
 // --------------------
 
-@toggle-color:    #fff;
-@toggle-bg:       #000;
-@toggle-hover-bg: #0432ff;
+@toggle-color:         #fff;
+@toggle-bg:            #000;
+@toggle-hover-bg:      #0432ff;
 
-@counter-bg:      #fff;
-@counter-color:   #000;
-@counter-border:  @toggle-bg;
-@counter-hover-border:  @toggle-hover-bg;
+@counter-bg:           #fff;
+@counter-color:        #000;
+@counter-border:       @toggle-bg;
+@counter-hover-border: @toggle-hover-bg;
 
-@panel-width:     40%;
+@panel-width-sm:       100%;
+@panel-position-sm:    0;
+
+@panel-width-md:       60%;
+@panel-position-md:    40%;
+
+@panel-width-lg:       40%;
+@panel-position-lg:    60%;
+
+@breakpoint-md:        min-width: 992px;
+@breakpoint-lg:        min-width: 1280px;
 
 // Container
 // --------------------
@@ -27,7 +37,7 @@
   left: 100%;
   right: 0;
   z-index: 999;
-  width: @panel-width;
+  width: @panel-width-sm;
   padding: 10px;
   box-sizing: border-box;
   background-color: #fff;
@@ -35,12 +45,38 @@
 
   // Open state
   &.show {
-    left: 60%;
+    left: @panel-position-sm;
     border-radius: 0;
     border-color: #000;
     box-shadow: 0 0 14px rgba(0,0,0,.25);
   }
 
+}
+
+@media (@breakpoint-md) {
+
+  .sd-container {
+    width: @panel-width-md;
+
+    &.show {
+      left: @panel-position-md;
+    }
+
+  }
+
+}
+
+@media (@breakpoint-lg) {
+
+  .sd-container {
+    width: @panel-width-lg;
+
+    &.show {
+      left: @panel-position-lg;
+    }
+
+  }
+  
 }
 
 
@@ -53,11 +89,12 @@
   position: fixed;
   bottom: 10px;
   right: 10px;
+  z-index: 1000;
   transition: all .25s ease;
 
   // Open state
   &.open {
-    right: 40%;
+    right: 10px;
     margin-right: 10px;
   }
 
@@ -65,6 +102,22 @@
 
 .icon-discussion {
   fill: @toggle-bg;
+}
+
+@media (@breakpoint-md) {
+
+  .sd-controls.open {
+    right: @panel-width-md;
+  }
+  
+}
+
+@media (@breakpoint-md) {
+
+  .sd-controls.open {
+    right: @panel-width-lg;
+  }
+  
 }
 
 // Comment counter
