--- a/demo-assets/demo.less
+++ b/demo-assets/demo.less
@@ -61,22 +61,15 @@ a:active {}
 // Headings
 // ==========================================================================
 
-h1 {
+h1, h2 {
   font-size: 36px;
   font-weight: 900;
 }
 
-h2 {
-  font-size: 30px;
-  font-weight: 900;
-  margin: 50px 0;
-  padding-top: 50px;
-  border-top: 2px solid #A682F5;
-}
-
 h3 {
-  font-size: 24px;
-  font-weight: 900;
+  font-size: 36px;
+  font-weight: 100;
+  margin: 50px 0;
 }
 
 /* ==========================================================================
@@ -145,16 +138,22 @@ h3 {
 }
 
 pre {
-  background-color: #f4f4f4;
+  background-color: #caf8ed;
   padding: 28px;
   font-size: 14px;
+  border-radius: 3px;
 }
 
 /* ==========================================================================
    Footer
    ========================================================================== */
 
-body > footer {}
+.page-footer {
+  font-size: 12px;
+  color: #999;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
 
 
 /* ==========================================================================
