--- a/demo-assets/demo.less
+++ b/demo-assets/demo.less
@@ -2,6 +2,25 @@
 @import 'demo.typography.css';
 
 // ==========================================================================
+// Icon font
+// ==========================================================================
+
+@font-face {
+  font-family: 'socicon';
+  src: url('font/socicon-webfont.eot');
+  src: url('font/socicon-webfont.eot?#iefix') format('embedded-opentype'),
+     url('font/socicon-webfont.woff') format('woff'),
+     url('font/socicon-webfont.ttf') format('truetype'),
+     url('font/socicon-webfont.svg#sociconregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.socicon {
+  font-family: 'socicon' !important;
+}
+
+// ==========================================================================
 // Generals
 // ==========================================================================
 
@@ -11,6 +30,14 @@ html {}
     font-size: 18px;
     font-weight: 300;
   }
+
+@media (max-width: 768px) {
+  
+  body {
+    font-size: 14px;
+  }
+
+}
 
 // Helper classes
 
@@ -34,6 +61,21 @@ html {}
 
   > h1 {
     font-size: 48px;
+  }
+
+}
+
+.dsa { margin-right: 1em; }
+.dsb { margin-left: 1em;  }
+
+.small {
+  font-size: .85em;
+}
+
+@media (max-width: 768px) {
+
+  .lead {
+    font-size: 18px;
   }
 
 }
@@ -72,17 +114,107 @@ h3 {
   margin: 50px 0;
 }
 
-/* ==========================================================================
-   Hero
-   ========================================================================== */
+@media (max-width: 768px) {
+
+  h1, h2, h3 {
+    font-size: 30px;
+  }
+
+}
+
+
+// ==========================================================================
+// Buttons
+// Code modified from Bootstrap
+// ==========================================================================
+
+.button {
+  display: inline-block;
+  padding: 15px 30px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 2px;
+  user-select: none;
+}
+
+.button:focus {
+  outline: thin dotted #333;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+
+.button:hover,
+.button:focus {
+  color: #333333;
+  text-decoration: none;
+}
+
+.button:active,
+.button.active {
+  outline: 0;
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
+// Button with a dark overlay
+
+.button-alpha-dark,
+.button-alpha-dark:link,
+.button-alpha-dark:visited {
+  background-color: rgba(0,0,0,.25);
+  color: #fff;
+}
+
+.button-alpha-dark:focus,
+.button-alpha-dark:hover {
+  background-color: rgba(0,0,0,.5);
+}
+
+// Default button
+
+.button-default,
+.button-default:link,
+.button-default:visited {
+  background: #000;
+  color: #fff;
+}
+
+.button-default:focus,
+.button-default:hover {
+  background-color: #343434;
+}
+
+// Primary button
+
+.button-primary,
+.button-primary:link,
+.button-primary:visited {
+  background: #7c38f6;
+  color: #fff;
+}
+
+.button-primary:focus,
+.button-primary:hover {
+  background-color: #4e239b;
+}
+
+// ==========================================================================
+// Hero
+// ==========================================================================
 
 .hero {
   height: 100vh;
   margin-bottom: 100px;
   color: #fff;
   // background-image: linear-gradient(to right bottom, #A682F5 0%, #9EDBFF 100%);
-  background-image: linear-gradient(321deg, #a682f5, #9edbff, #6ad6cc, #99d170, #e9c150);
-  background-size: 1000% 1000%;
+  background-image: linear-gradient(320deg, #a682f5, #9edbff, #6ad6cc, #99d170, #e9c150);
+  background-size: 500% 500%;
   animation: hero-gradient 30s ease infinite;
   @keyframes hero-gradient { 
       0%   { background-position: 0%   10% }
@@ -136,6 +268,10 @@ h3 {
 
 }
 
+.hero-logo {
+  margin-bottom: 50px;
+}
+
 .hero-title {
   font-size: 36px;
   font-weight: 900;
@@ -143,91 +279,114 @@ h3 {
 
 .hero-text {
   font-weight: 100;
+  margin-bottom: 50px;
 }
 
-pre {
-  background-color: #caf8ed;
-  padding: 28px;
+@media (max-width: 768px) {
+
+  .hero {
+    height: auto;
+    padding-bottom: 20px;
+    margin-bottom: 50px;
+
+    &:after {
+      display: none;
+    }
+
+  }
+
+  .hero-info {
+    text-align: left;
+    height: auto;
+    font-size: 12px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .logo-sprawsm {
+    display: none;
+  }
+
+  .hero .center-v {
+    position: static;
+    transform: none;
+  }
+
+  .hero-logo,
+  .hero-text {
+    margin-bottom: 0;
+  }
+
+  .hero-title {
+    font-size: 30px;
+  }
+
+  .hero-action {
+    text-align: center;
+
+    .button {
+      padding: 20px 40px;
+      display: block;
+      margin: 20px 0;
+    }
+
+  }
+
+}
+
+// ==========================================================================
+// Prettyfy styles for code
+// ==========================================================================
+
+pre.prettyprint {
+  padding: 20px !important;
+  border: none !important;
+  background-color: #f4f4f4;
   font-size: 14px;
-  border-radius: 3px;
+  font-family: monospace !important;
 }
 
-/* ==========================================================================
-   Footer
-   ========================================================================== */
+
+// ==========================================================================
+// Footer
+// ==========================================================================
 
 .page-footer {
   font-size: 12px;
   color: #999;
   margin-top: 100px;
   margin-bottom: 100px;
+  // border-top: 1px solid #9edbff;
+
+  &:before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin-bottom: 80px;
+    background-image: linear-gradient(320deg, #a682f5, #9edbff, #6ad6cc, #99d170, #e9c150);
+    background-size: 500% 500%;
+    animation: hero-gradient 30s ease infinite;
+    @keyframes hero-gradient { 
+        0%   { background-position: 0%   10% }
+        50%  { background-position: 100% 91% }
+        100% { background-position: 0%   10% }
+    }
+  }
+
+.icons {
+  font-size: 24px;
+
+  a:link,
+  a:visited {
+    color: #ccc;
+  }
+
+  a:focus,
+  a:hover {
+    color: #c542ef;
+  }
+
 }
 
-
-/* ==========================================================================
-   Primary content
-   ========================================================================== */
-
-.primary {}
-
-
-/* ==========================================================================
-   Secondary content
-   ========================================================================== */
-
-.secondary {}
-
-
-/* ==========================================================================
-   Breakpoint: 800px
-   ========================================================================== */
-
-@media only screen and (max-width: 800px) {
-  /* Your code here */
-}
-
-
-/* ==========================================================================
-   Breakpoint: 480px
-   ========================================================================== */
-
-@media only screen and (max-width: 480px) {
-  /* Your code here */
-}
-
-
-/* ==========================================================================
-   Target high DPI devices
-   Source URI: https://gist.github.com/3446599 
-   ========================================================================== */
-
-/* ---------------------------------------------------------- */
-/*                                                            */
-/* A media query that captures:                               */
-/*                                                            */
-/* - Retina iOS devices                                       */
-/* - Retina Macs running Safari                               */
-/* - High DPI Windows PCs running IE 8 and above              */
-/* - Low DPI Windows PCs running IE, zoomed in                */
-/* - Low DPI Windows PCs and Macs running Firefox, zoomed in  */
-/* - Android hdpi devices and above                           */
-/* - Android tvdpi devices, including Google Nexus 7          */
-/* - Chrome running on high DPI Macs and PCs                  */
-/* - Opera running on high DPI Macs, PCs and mobile devices   */
-/*                                                            */
-/* Please note that that this code assumes you'll swap a      */
-/* 2× version of your images. If you'd like to supply         */
-/* finer increments, other thresholds might be appropriate.   */
-/*                                                            */
-/* A test for CSS pixel densites can be found here:           */
-/* http://bjango.com/articles/min-device-pixel-ratio/         */
-/*                                                            */
-/*                                  @marcedwards from @bjango */
-/*                                                            */
-/* ---------------------------------------------------------- */
-
-@media only screen and (-webkit-min-device-pixel-ratio: 1.3), 
-       only screen and (-o-min-device-pixel-ratio: 13/10),
-       only screen and (min-resolution: 120dpi) {
-  /* Your code here */
 }
