--- a/demo-assets/demo.less
+++ b/demo-assets/demo.less
@@ -31,6 +31,23 @@ html {}
     font-weight: 300;
   }
 
+hr {
+  border: none;
+  display: block;
+  width: 100%;
+  height: 1px;
+  margin: 28px 0;
+  clear: both;
+  background-image: linear-gradient(320deg, #a682f5, #9edbff, #6ad6cc, #99d170, #e9c150);
+  background-size: 500% 500%;
+  animation: hero-gradient 30s ease infinite;
+  @keyframes hero-gradient { 
+      0%   { background-position: 0%   10% }
+      50%  { background-position: 100% 91% }
+      100% { background-position: 0%   10% }
+  }
+}
+
 @media (max-width: 768px) {
   
   body {
@@ -44,6 +61,25 @@ html {}
 .clear:before,
 .clear:after { content: ""; display: table; }
 .clear:after { clear:both;                  }
+
+.txtc { text-align: center; }
+.txtl { text-align: left;   }
+.txtr { text-align: right;  }
+
+.vmargins-lg {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.vmargins-md {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.vmargins-sm {
+  margin-top: 28px;
+  margin-bottom: 28px;
+}
 
 .rel {
   position: relative;
@@ -112,6 +148,12 @@ h3 {
   font-size: 36px;
   font-weight: 100;
   margin: 50px 0;
+}
+
+.heading {
+  font-size: 1em;
+  font-weight: 900;
+  margin: 1em 0;
 }
 
 @media (max-width: 768px) {
@@ -210,7 +252,6 @@ h3 {
 
 .hero {
   height: 100vh;
-  margin-bottom: 100px;
   color: #fff;
   // background-image: linear-gradient(to right bottom, #A682F5 0%, #9EDBFF 100%);
   background-image: linear-gradient(320deg, #a682f5, #9edbff, #6ad6cc, #99d170, #e9c150);
@@ -287,7 +328,6 @@ h3 {
   .hero {
     height: auto;
     padding-bottom: 20px;
-    margin-bottom: 50px;
 
     &:after {
       display: none;
@@ -389,4 +429,14 @@ pre.prettyprint {
 
 }
 
+}
+
+// ==========================================================================
+// Modules
+// ==========================================================================
+
+.box {
+  border: 2px solid #c4f4e4;
+  border-radius: 2px;
+  padding: 7px 28px;
 }
