Added tweet button.

--- a/demo-assets/demo.less
+++ b/demo-assets/demo.less
@@ -66,6 +66,9 @@ hr {
 .txtl { text-align: left;   }
 .txtr { text-align: right;  }
 
+.left  { float: left;  }
+.right { float: right; }
+
 .vmargins-lg {
   margin-top: 100px;
   margin-bottom: 100px;
@@ -309,6 +312,10 @@ h3 {
 
 }
 
+.promo {
+  float: left;
+}
+
 .hero-logo {
   margin-bottom: 50px;
 }
@@ -320,6 +327,10 @@ h3 {
 
 .hero-text {
   font-weight: 100;
+  margin-bottom: 50px;
+}
+
+.hero-action {
   margin-bottom: 50px;
 }
 
@@ -343,6 +354,11 @@ h3 {
     margin-bottom: 20px;
   }
 
+  .promo {
+    float: none;
+    margin-bottom: 10px;
+  }
+
   .logo-sprawsm {
     display: none;
   }
@@ -363,6 +379,7 @@ h3 {
 
   .hero-action {
     text-align: center;
+    margin-bottom: 20px;
 
     .button {
       padding: 20px 40px;
@@ -370,6 +387,10 @@ h3 {
       margin: 20px 0;
     }
 
+  }
+
+  .hero-footer {
+    text-align: center;
   }
 
 }
